<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_server_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_server_ip"
            android:imeOptions="actionUnspecified"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/input_server_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_server_port"
            android:imeOptions="actionUnspecified"
            android:maxLength="14"
            android:maxLines="1"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_username"
            android:imeOptions="actionUnspecified"
            android:maxLength="14"
            android:maxLines="1"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_password"
            android:imeOptions="actionUnspecified"
            android:maxLength="14"
            android:maxLines="1"
            android:inputType="textPassword"
            android:singleLine="true"/>
        <Button
            android:id="@+id/connect_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_connect"
            android:textStyle="bold"/>

    </LinearLayout>
</ScrollView>
